Readded App.xaml. Somehow got deleted?

--- a/FreeMoVR Server2/FreeMoVR Server2.csproj
+++ b/FreeMoVR Server2/FreeMoVR Server2.csproj
@@ -57,7 +57,8 @@
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
+      <SubType>
+      </SubType>
     </ApplicationDefinition>
     <Compile Include="Loading.xaml.cs">
       <DependentUpon>Loading.xaml</DependentUpon>
