Added Version 3 of the server

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\FreeMoVR Server\packages.config" />
   <repository path="..\FreeMoVR Server2\packages.config" />
+  <repository path="..\FreeMoVR Server3\packages.config" />
+  <repository path="..\FreeMoVR Server4\packages.config" />
 </repositories>
