--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,6 @@
   <repository path="..\FreeMoVR Server2\packages.config" />
   <repository path="..\FreeMoVR Server3\packages.config" />
   <repository path="..\FreeMoVR Server4\packages.config" />
+  <repository path="..\FreeMoVR Simple Client\packages.config" />
+  <repository path="..\FreeMoVR Simple Server\packages.config" />
 </repositories>
