--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,4 +6,5 @@
   <repository path="..\FreeMoVR Server4\packages.config" />
   <repository path="..\FreeMoVR Simple Client\packages.config" />
   <repository path="..\FreeMoVR Simple Server\packages.config" />
+  <repository path="..\FreeMoVR Simple Server2\packages.config" />
 </repositories>
